<resources>
    <string name="app_name">账单助手</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="add_record">添加记录</string>
    <string name="money_format">￥%.2f</string>
    <string name="record_money_format">%.2f</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_account_prop">AccountActivity</string>
    <string name="title_activity_create_or_edit_account">CreateOrEditAccountActivity</string>
    <string name="title_activity_month_report">月报</string>

    <string name="account_title">我的账户</string>
    <string name="record_title">收入与支出</string>
    <string name="analysis_title">统计分析</string>

    <string name="account_select">账户选择</string>
    <string name="money_format_2">账户余额：￥%.2f</string>

    <!-- 记录 -->
    <string name="please_enter_record_type_name">请输入自定义名称</string>
    <string name="record_type_name_too_long">类别名称不能超过4个字哦</string>
    <string name="please_not_enter_same_record_type_name">请不要键入相同的记录名称</string>
    <string name="about">关于</string>
    <string name="introduce">简洁、便捷、语音记账\n
        ------账单助手是啥------\n
嗯~没错我就是个记账APP，功能不花哨主打实用，算账本来就是头疼事还整那些花里胡哨的功能干啥呢？所以我们这款记账APP就是简洁！实用！！！\n
        ------账单助手主要功能------\n
- 支持多账户记账\n
- 语音记账，不用手动更方便\n
- 时间轴记账单，账单一目了然\n
- 支持账单数据导出，方便各个场景使用\n
- 数据同步，换手机，刷系统，账单轻松恢复\n
- 账单统计功能，支持月度、年度消费分析，消费情况清清楚楚\n
    </string>
    <string name="introduce2">ps:请勿在软件中填写个人隐私信息</string>
    <string name="app_name_with_introduce">账单助手 - 理财的好帮手</string>
    <string name="developers">开发人员</string>
    <string name="developer_and_designer"><![CDATA[开发者 & 设计]]></string>
    <string name="developer_icon1"><![CDATA[图标1设计]]></string>
    <string name="developer_icon2"><![CDATA[图标2设计]]></string>
    <string name="developer">开发者</string>
    <string name="other">其他</string>
    <string name="weibo">新浪微博</string>
    <string name="feedback">建议反馈</string>
    <string name="feedback_tip">让账单助手变得更棒</string>
    <string name="open_source_lis">开源协议</string>
    <string name="introduce_and_help">介绍与帮助</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_get_password">找回密码</string>

    <string name="title_activity_create_new_record_type">创建新记录</string>
    <string name="title_activity_account_transaction">交易流水</string>
    <string name="title_activity_record_pie_analysis">分类统计</string>
    <string name="title_activity_record_line_analysis">收支趋势</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="new_user_tip">新用户注册</string>
    <string name="forget_pass">忘记密码？</string>

    <string name="user_link">账号关联</string>
    <string name="export">数据导出</string>
    <string name="settings">设置</string>
    <string name="common_settings">常规设置</string>
    <string name="yi_yan_setting">一言</string>
    <string name="yi_yan_setting_on">加载页面显示一言</string>
    <string name="yi_yan_setting_off">加载页面不显示一言</string>
    <string name="yi_yan_setting_wifi">仅WIFI更新</string>
    <string name="yi_yan_setting_custom">自定义</string>
    <string name="yi_yan_setting_custom_empty">当前未设置</string>
    <string name="sync_setting">同步设置</string>
    <string name="sync_setting_on">仅WIFI下自动同步</string>
    <string name="sync_setting_off">有网络连接自动同步</string>
    <string name="remind_setting">提醒设置</string>
    <string name="remind_setting_on">已开启提醒</string>
    <string name="remind_setting_off">已关闭提醒</string>
    <string name="immersive_status_bar">immersive_status_bar</string>
    <string name="immersive_status_bar_setting">沉浸式状态栏</string>
    <string name="immersive_status_bar_on">已开启</string>
    <string name="immersive_status_bar_off">已关闭</string>
    <string name="security_settings">安全设置</string>
    <string name="gesture_settings">手势解锁</string>
    <string name="gesture_setting_on">手势解锁已开启</string>
    <string name="gesture_setting_off">手势解锁已关闭</string>
    <string name="vibrator_setting">按键震动</string>
    <string name="vibrator_setting_on">已开启</string>
    <string name="vibrator_setting_off">已关闭</string>

    <string name="inMoney">本月收入\n%.2f</string>
    <string name="outMoney">本月支出\n%.2f</string>

    <string name="key_icon">key_icon</string>
    <string name="icon_type">启动图标</string>
    <string name="icon_type1">图标1</string>
    <string name="icon_type2">图标2</string>

    <string name="type_analysis">分类统计(当月)</string>
    <string name="intent_analysis">收支趋势(当年)</string>
    <string name="in_text">&lt;font color=#dc6268>收&lt;/font>&lt;font color=#e6b7c2> | 支&lt;/font></string>
    <string name="out_text">&lt;font color=#e6b7c2>收 | &lt;/font>&lt;font color=#dc6268>支&lt;/font></string>
    <string name="user_info">用户信息</string>


    <string name="not_select_same_account">请不要选择相同账户</string>
    <string name="select_in_account">请选择转入账户</string>
    <string name="enter_account_trans_money">请输入转账金额</string>
    <string name="not_have_enough_money">账户只有这么多钱啦</string>

    <string name="enter_account_name">请填写账户名称</string>

    <string name="edit_account_name">修改账户名</string>
    <string name="edit_account_money">修改账户余额</string>
    <string name="edit_account_remark">修改账户备注</string>
    <string name="edit_account_type">修改账户类型</string>

    <string name="create_account">创建账户</string>
    <string name="edit_account">修改账户</string>
    <string name="delete_account">删除账户?</string>

    <string name="retain_at_least_one_account">请至少保留一个账户</string>

    <string name="ok">确认</string>
    <string name="cancel">取消</string>

    <string name="delete_record">删除记录?</string>

    <string name="title_activity_qrcode">我的二维码</string>
    <string name="title_activity_accounts_transfer">转账</string>

    <string name="edit_record_type">编辑</string>
    <string name="at_least_save_one_type">请至少保留一个收支类型</string>
    <string name="delete_record_type">删除类型？</string>

    <string name="delete_remark">删除备注\"%s\"？</string>

    <string name="loading">数据加载中\n。。。</string>
    <string name="update_info">更新日志</string>
    <string name="download">下载</string>

    <string name="all_money">总资金</string>
</resources>

