<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_header_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_header_height"
                android:background="#1C1E22"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:layout_marginTop="46dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name_with_introduce"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/md_white_1000"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/md_white_1000"
                    android:textSize="14sp"
                    tools:text="Version 1.2.3"/>
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/introduce_and_help"
                android:textColor="@color/md_grey_600"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/card">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/introduce"
                    android:textColor="@color/md_grey_800"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/md_grey_500"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/developers"
                android:textColor="@color/md_grey_600"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card">

                <ImageView
                    android:id="@+id/ig_suda"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_margin="16dp"
                    android:src="@mipmap/suda"/>

                <TextView
                    android:id="@+id/tv_suda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/ig_suda"
                    android:layout_toEndOf="@id/ig_suda"
                    android:layout_toRightOf="@id/ig_suda"
                    android:text="Suda"
                    android:textColor="@color/md_grey_800"
                    tools:ignore="HardcodedText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_suda"
                    android:paddingBottom="16dp"
                    android:layout_toRightOf="@id/ig_suda"
                    android:text="@string/developer_and_designer"
                    android:textColor="@color/md_grey_600"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/md_grey_500"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/open_source_lis"
                android:textColor="@color/md_grey_600"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/card"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_otto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="otto - Square"
                    android:textColor="@color/md_grey_800"
                    tools:ignore="HardcodedText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_otto"
                    android:text="https://github.com/square/otto\nApache Software License 2.0"
                    android:textColor="@color/md_grey_600"
                    android:textSize="@dimen/open_source_lis_text_size"
                    tools:ignore="HardcodedText"/>
            </RelativeLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
